--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
   <script>
     // Ganti dengan Write API Key kamu
-    const apiKey = "WRITE_API_KEY";
+    const apiKey = "7ZK0FHVMYJ8QUG92";
 
     function sendCommand(value) {
       const url = `https://api.thingspeak.com/update?api_key=${apiKey}&field1=${value}`;
@@ -74,3 +74,4 @@
   </script>
 </body>
 </html>
+
