--- a/index.html
+++ b/index.html
@@ -1,84 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kontrol 4 Relay</title>
-    <style>
-        body { font-family: sans-serif; display: flex; justify-content: center; align-items: center; min-height: 100vh; background-color: #f0f0f0; }
-        .container { text-align: center; }
-        .relay-control { margin: 20px; padding: 15px; border: 1px solid #ccc; border-radius: 10px; background-color: white; }
-        button { font-size: 1.2rem; padding: 10px 20px; margin: 5px; cursor: pointer; border: none; border-radius: 8px; color: white; }
-        .btn-on { background-color: #28a745; }
-        .btn-off { background-color: #dc3545; }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Smart Home Control</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <h1>Kontrol Multi Relay</h1>
-        
-        <div class="relay-control">
-            <h2>Relay 1</h2>
-            <button class="btn-on" data-relay="relay1">ON</button>
-            <button class="btn-off" data-relay="relay1">OFF</button>
-        </div>
-        
-        <div class="relay-control">
-            <h2>Relay 2</h2>
-            <button class="btn-on" data-relay="relay2">ON</button>
-            <button class="btn-off" data-relay="relay2">OFF</button>
-        </div>
-
-        <div class="relay-control">
-            <h2>Relay 3</h2>
-            <button class="btn-on" data-relay="relay3">ON</button>
-            <button class="btn-off" data-relay="relay3">OFF</button>
-        </div>
-
-        <div class="relay-control">
-            <h2>Relay 4</h2>
-            <button class="btn-on" data-relay="relay4">ON</button>
-            <button class="btn-off" data-relay="relay4">OFF</button>
-        </div>
-
-    </div>
-
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
-
-    <script>
-        // --- Ganti dengan Konfigurasi Firebase Anda ---
-        var firebaseConfig = {
-            apiKey: "AIzaSyAWVGErwMagsBhKpFQbvvdYe9zdRaLFQo0",
-            authDomain: "relay-4f3b0.firebaseapp.com",
-            databaseURL: "https://relay-4f3b0-default-rtdb.asia-southeast1.firebasedatabase.app",
-            projectId: "relay-4f3b0",
-        };
-
-        firebase.initializeApp(firebaseConfig);
-        var database = firebase.database();
-
-        // Fungsi untuk mengontrol relay
-        function setRelayStatus(relayId, status) {
-            console.log(`Mengatur ${relayId} menjadi ${status}`);
-            database.ref('relays/' + relayId).set(status);
-        }
-
-        // Tambahkan event listener untuk semua tombol ON
-        document.querySelectorAll('.btn-on').forEach(button => {
-            button.addEventListener('click', () => {
-                const relayId = button.getAttribute('data-relay');
-                setRelayStatus(relayId, "ON");
-            });
-        });
-
-        // Tambahkan event listener untuk semua tombol OFF
-        document.querySelectorAll('.btn-off').forEach(button => {
-            button.addEventListener('click', () => {
-                const relayId = button.getAttribute('data-relay');
-                setRelayStatus(relayId, "OFF");
-            });
-        });
-    </script>
+  <h1>Kontrol Relay</h1>
+  <div class="container">
+    <button onclick="toggleRelay('relay1')">Relay 1</button>
+    <button onclick="toggleRelay('relay2')">Relay 2</button>
+    <button onclick="toggleRelay('relay3')">Relay 3</button>
+    <button onclick="toggleRelay('relay4')">Relay 4</button>
+  </div>
+  <script src="script.js"></script>
 </body>
 </html>
+
